v5.0 (planing)
1. support for SGE cluster;
2. support for lauching multiple assembly tasks at the assembly step.

v4.0 (planing)
change usearch to vesearch.

v3.0
from Shanlin Liu

